--- a/.github/workflows/concat.yml
+++ b/.github/workflows/concat.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@separated-pkgman-logic
+      - uses: actions/checkout@master
         with:
           fetch-depth: 1
       - name: Run Makefile
