--- a/.github/workflows/concat.yml
+++ b/.github/workflows/concat.yml
@@ -17,3 +17,10 @@ jobs:
           fetch-depth: 1
       - name: Run Makefile
         run: make all
+      - name: commit
+        run: |
+          git config user.email "piu@piuproject.org"
+          git config user.name "Piu Bot via GitHub Actions"
+          git add bin/piu
+          git commit -m "Automated Continuous Delivery"
+          git push
